# KPI

QuizExamMaker-coursework2/: app.js  package-lock.json  package.json
QuizExamMaker-coursework2/modules/: func.js  storage.js
QuizExamMaker-coursework2/routes/: api.js  tests.js
QuizExamMaker-coursework2/views/: 403.ejs  createTest.ejs  help.ejs  index.ejs  login.ejs  profile.ejs  register.ejs  result.ejs  test_design.ejs  test_view.ejs  tests.ejs  users.ejs
courseWork1/: administrator.cpp  administrator.h  administrator.ui  client.cpp  client.h  clogin.cpp  clogin.h  clogin.ui  cursova.pro  dialogreservation.cpp  dialogreservation.h  dialogreservation.ui  dialogshedule.cpp  dialogshedule.h  dialogshedule.ui  director.cpp  director.h  director.ui  doorman.cpp  doorman.h  doorman.ui  emloyee  hotelinform.cpp  hotelinform.h  hotelinform.ui  housemaid.cpp  housemaid.h  housemaid.ui  imagelistmodel.cpp  imagelistmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  manager.ui  pixmappair.h  qwordcompleter.cpp  qwordcompleter.h  (+15 more)
courseWork1/src/: administrator.cpp  administrator.h  administrator.ui  clogin.cpp  clogin.h  clogin.ui  dialogreservation.cpp  dialogshedule.cpp  (+42 more)
progbase2/labs/lab5/: CMakeCache.txt  CMakeLists.txt  Computer_Game.json  Computer_Game.xml  Makefile  classification.txt  cmake_install.cmake  jdfhgkdfhg.xml  main.c
progbase2/labs/lab5/include/: list.h  menu.h  storage.h  structure.h
progbase2/labs/lab5/src/: cui.c  list.c  menu.c  storage.c  structure.c
progbase2/tasks/udp/: CMakeLists.txt  main.c  server.c
(+282 files in other folders)
